--- a/desafio-1.html
+++ b/desafio-1.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        var numero = prompt('Digite um numero');
+        numero = parseInt(numero);
+
+        for(var n = 1; n <= numero; n++){
+            alert(n);
+        }
+
+    </script>
 </body>
 </html>
