--- a/exerc-5.html
+++ b/exerc-5.html
@@ -13,7 +13,7 @@
 
         for(var n = 1; n <= 10 ; n++){
             soma = (numero * n); 
-            alert(soma);
+            alert(numero + " * " + n +" = "+ soma);
 
         }
 
